--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -1,38 +1,38 @@
 <div>
-<div class="modal-body" tabindex="-1" role="dialog">
-    
+  <div class="modal-body" tabindex="-1" role="dialog">
+
 
     <div *ngIf="message != null && message.length > 0" class="row error-container">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="label-holder">
-                <strong style="color:#8c0000;">Error</strong>
-            </div>
-            <div class="holder">
-                <div>
-                    <p class="error-message">{{message}}</p>
-                </div>
-            </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div class="label-holder">
+          <strong style="color:#8c0000;">Error</strong>
         </div>
-        <div class="col-md-2"></div>
+        <div class="holder">
+          <div>
+            <p class="error-message">{{message}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
     </div>
-    
+
     <div class="row" *ngIf="!existingTask">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <ol class="list-group list-group-horizontal">
-<!-- 
+          <!-- 
           <li class="list-group-item" [ngClass]="{'list-group-item-success':page.type === 'FILE'}" >Upload</li>
- -->        
+ -->
 
           <modal-step-indicator [stepConfig]="modalStepConfig"></modal-step-indicator>
 
           <!-- <li class="list-group-item" [ngClass]="{'list-group-item-success':page.type === 'CATEGORY'}">Categories</li> -->
           <!-- <li class="list-group-item" [ngClass]="{'list-group-item-success':page.type === 'SUMMARY'}">Finalize</li> -->
-        </ol>                    
-      </div>    
+        </ol>
+      </div>
     </div>
-    
+
     <div class="row" *ngIf="!existingTask && labels.length > 0">
       <div class="col-md-2"></div>
       <div class="col-md-8">
@@ -40,61 +40,64 @@
           <li [@fadeInOnEnter] *ngFor="let label of labels">
             <span> {{label}}</span>
           </li>
-        </ul>                    
-      </div>    
+        </ul>
+      </div>
     </div>
-    
+
     <!-- Section for each page -->
     <div class="row" *ngIf="page.type === 'CATEGORY'">
       <div class="col-md-2"></div>
       <div class="col-md-8">
-      
+
         <div class="form-group">
           <label [for]="page.selection.type">{{page.selection.type}}:</label>
-          
+
           <div *ngIf="!page.selection.isNew" class="row">
             <div class="col-md-8">
-              <select [name]="page.selection.type" [(ngModel)]="page.selection.value" [disabled]="page.selection.isNew" required>
+              <select [name]="page.selection.type" [(ngModel)]="page.selection.value" [disabled]="page.selection.isNew"
+                required>
                 <option></option>
                 <option *ngFor="let option of page.options" [value]="option.id">{{option.name}}</option>
               </select>
             </div>
             <div class="col-md-2">
-              <button *ngIf="!page.selection.isNew" type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(true)">
+              <button *ngIf="!page.selection.isNew" type="button btn btn-primary" class="btn btn-primary"
+                (click)="setIsNew(true)">
                 Add
               </button>
             </div>
-         </div>    
+          </div>
         </div>
         <div [@fadeInOnEnter] *ngIf="page.selection.isNew" class="form-group">
           <div class="row">
             <div class="col-md-8">
-              <input autofocus [(ngModel)]="page.selection.label" name="label" type="input" class="form-control" [placeholder]="page.selection.type + ' name...'" required />
+              <input autofocus [(ngModel)]="page.selection.label" name="label" type="input" class="form-control"
+                [placeholder]="page.selection.type + ' name...'" required />
             </div>
             <div class="col-md-2">
               <button type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(false)">
                 Cancel
               </button>
             </div>
-         </div>    
-         <div [@fadeInOnEnter] class="row" *ngIf="hasField('platform')">
-           <div class="col-md-8">
-             <label for="platform" style="margin-top: 10px;">Platform:</label>
-             <select [(ngModel)]="page.selection.platform" name="platform" type="input" required>                               
-               <option></option>
-               <option *ngFor="let platform of platforms" [value]="platform.oid">{{platform.displayLabel}}</option>
-             </select>            
-           </div>
-         </div>    
-         <div [@fadeInOnEnter] class="row" *ngIf="hasField('sensor')">
-           <div class="col-md-8">
-             <label for="sensor" style="margin-top: 10px;">Sensor:</label>
-             <select [(ngModel)]="page.selection.sensor" name="sensor" type="input" required>                               
-               <option></option>
-               <option *ngFor="let sensor of sensors" [value]="sensor.oid">{{sensor.displayLabel}}</option>
-             </select>            
-           </div>
-         </div>    
+          </div>
+          <div [@fadeInOnEnter] class="row" *ngIf="hasField('platform')">
+            <div class="col-md-8">
+              <label for="platform" style="margin-top: 10px;">Platform:</label>
+              <select [(ngModel)]="page.selection.platform" name="platform" type="input" required>
+                <option></option>
+                <option *ngFor="let platform of platforms" [value]="platform.oid">{{platform.displayLabel}}</option>
+              </select>
+            </div>
+          </div>
+          <div [@fadeInOnEnter] class="row" *ngIf="hasField('sensor')">
+            <div class="col-md-8">
+              <label for="sensor" style="margin-top: 10px;">Sensor:</label>
+              <select [(ngModel)]="page.selection.sensor" name="sensor" type="input" required>
+                <option></option>
+                <option *ngFor="let sensor of sensors" [value]="sensor.oid">{{sensor.displayLabel}}</option>
+              </select>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -106,145 +109,153 @@
 
         <div *ngFor="let selection of selections" class="form-group">
           <label [for]="selection.type">{{selection.type}}:</label>
-          <input [(ngModel)]="selection.label" [name]="selection.type" type="input" class="form-control" disabled required />
+          <input [(ngModel)]="selection.label" [name]="selection.type" type="input" class="form-control" disabled
+            required />
         </div>
 
         <div class="form-group">
           <label for="outFileName">Output Product Name Prefix</label>
-          <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control" placeholder="Output product name prefix..." />
+          <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control"
+            placeholder="Output product name prefix..." />
         </div>
       </div>
     </div>
-    
-    <div [@fadeInOnEnter] class="row" *ngIf="finishedTask != null">
+
+    <!-- <div [@fadeInOnEnter] class="row" *ngIf="finishedTask != null">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <a (click)="handleAddMetadata(finishedTask)">Add Metadata</a>
       </div>
-    </div>
-    
+      <div class="col-md-2"></div>
+    </div> -->
+
 
     <div [@fadeInOnEnter] [hidden]="page.type !== 'FILE' && page.type !== 'SUMMARY'" class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
 
-                <!-- Existing task panel -->
-                <div *ngIf="existingTask && !currentTask">
-                    <div class="panel panel-warning" style="margin: 30px 0 30px 0;">
-                        <div class="panel-heading" style="font-size: 20px;">Partial Upload Detected</div>
-                        <div class="panel-body">
-                            <h4>A partial upload was detected. You can either cancel that partial upload or attempt to
-                                continue.</h4>
-                            <h4>
-                                <b>To continue an upload</b>
-                                please re-upload your file and we will try our best to continue where you left off.
-                            </h4>
+        <!-- Existing task panel -->
+        <div *ngIf="existingTask && !currentTask">
+          <div class="panel panel-warning" style="margin: 30px 0 30px 0;">
+            <div class="panel-heading" style="font-size: 20px;">Partial Upload Detected</div>
+            <div class="panel-body">
+              <h4>A partial upload was detected. You can either cancel that partial upload or attempt to
+                continue.</h4>
+              <h4>
+                <b>To continue an upload</b>
+                please re-upload your file and we will try our best to continue where you left off.
+              </h4>
 
-                            <hr>
-                            <button type="button" class="btn btn-danger" style="margin-top: 20px;"
-                                (click)="removeUpload($event)">
-                                <i class="icon-upload icon-white"></i>
-                                Cancel Upload
-                            </button>
-<!-- 
+              <hr>
+              <button type="button" class="btn btn-danger" style="margin-top: 20px;" (click)="removeUpload($event)">
+                <i class="icon-upload icon-white"></i>
+                Cancel Upload
+              </button>
+              <!-- 
                             <button type="button" class="btn btn-primary" style="margin-top: 20px;"
                                 (click)="showUploadPanel()">
                                 <i class="icon-upload icon-white"></i>
                                 Continue Upload
                             </button>
- -->                            
-                        </div>
-                    </div>
-                </div> <!-- End existing task panel -->
+ -->
+            </div>
+          </div>
+        </div> <!-- End existing task panel -->
 
-                <!-- Task finished upload notification -->
-                <div *ngFor="let note of taskFinishedNotifications" class="panel panel-success" style="margin: 30px 0 30px 0;">
-                    <div class="panel-heading" style="font-size: 20px;">
-                        Upload Details
-                        <i class="fa fa-times btn btn-close pull-right" style="min-width:20px;padding:0;line-height: 27px;" (click)="closeTaskFinishedNotification(note.id)"></i>
-                    </div>
-                    <div class="panel-body">
-                        <h4>
-                            Status:
-                            <b> Upload successfully completed </b>
-                        </h4>
-                        <h4>
-                            Message:
-                            <b> {{note.message}} </b>
-                            <!-- You can view your uploads on the <a href="management#/site/tasks" >Workflow Task page</a>. -->
-                        </h4>
-                    </div>
-                </div> <!-- End task finished upload notification -->
-                
-                <!-- Current upload indicator -->
-                <div class="" [hidden]="!uploadVisible">
-                    <div *ngIf="currentTask" class="panel panel-warning" style="margin: 30px 0 30px 0;">
-                        <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
-                        <div class="panel-body">
-                            <h4>
-                                Status:
-                                <b> {{currentTask.status}} </b>
-                            </h4>
-                            <h4>
-                                Message:
-                                <b> {{currentTask.message}} </b>
-                            </h4>
-                            <h4>
-                                Upload Started On:
-                                <b> {{currentTask.createDate}} </b>
-                            </h4>
-                            <h4>
-                                Last Updated:
-                                <b> {{currentTask.lastUpdatedDate}} </b>
-                            </h4>
-                            <h4>
-                                Elapsed Time:
-                                <b> {{uploadCounter}} </b>
-                            </h4>
-                        </div>
-                    </div>
+        <!-- Task finished upload notification -->
+        <div *ngFor="let note of taskFinishedNotifications" class="panel panel-success" style="margin: 30px 0 30px 0;">
+          <div class="panel-heading" style="font-size: 20px;">
+            Upload Details
+            <i class="fa fa-times btn btn-close pull-right" style="min-width:20px;padding:0;line-height: 27px;"
+              (click)="closeTaskFinishedNotification(note.id)"></i>
+          </div>
+          <div class="panel-body">
+            <h4>
+              Status:
+              <b> Upload successfully completed </b>
+            </h4>
+            <h4>
+              Message:
+              <b> {{note.message}} </b>
+              <!-- You can view your uploads on the <a href="management#/site/tasks" >Workflow Task page</a>. -->
+            </h4>
+          </div>
+        </div> <!-- End task finished upload notification -->
 
-                    <div class="uploader-container" style="margin-top: 20px;" #uploader></div>
-                </div> <!-- End current upload indicator -->
-        </div>
-        <div class="col-md-2"></div>
+        <!-- Current upload indicator -->
+        <div class="" [hidden]="!uploadVisible">
+          <div *ngIf="currentTask" class="panel panel-warning" style="margin: 30px 0 30px 0;">
+            <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
+            <div class="panel-body">
+              <h4>
+                Status:
+                <b> {{currentTask.status}} </b>
+              </h4>
+              <h4>
+                Message:
+                <b> {{currentTask.message}} </b>
+              </h4>
+              <h4>
+                Upload Started On:
+                <b> {{currentTask.createDate}} </b>
+              </h4>
+              <h4>
+                Last Updated:
+                <b> {{currentTask.lastUpdatedDate}} </b>
+              </h4>
+              <h4>
+                Elapsed Time:
+                <b> {{uploadCounter}} </b>
+              </h4>
+            </div>
+          </div>
+
+          <div class="uploader-container" style="margin-top: 20px;" #uploader></div>
+        </div> <!-- End current upload indicator -->
+      </div>
+      <div class="col-md-2"></div>
     </div>
-    
-    <div [@fadeInOnEnter] class="row" *ngIf="currentTask != null">
+
+    <!-- <div [@fadeInOnEnter] class="row" *ngIf="currentTask != null">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <a (click)="handleAddMetadata(currentTask)">Add Metadata</a>
       </div>
-    </div>
-    
-    </div>
-      <div class="modal-footer">
-    
+      <div class="col-md-2"></div>
+    </div> -->
+
+  </div>
+  <div class="modal-footer">
+
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <div class="btn-holder" style="text-align: right;">
-            <button type="button" [disabled]="disabled" (click)="close()" [disabled]="disabled" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
-              <span class="ui-button-text">Close</span>
-            </button>
+          <button type="button" [disabled]="disabled" (click)="close()" [disabled]="disabled" class="btn btn-default"
+            role="button" aria-disabled="false" style="padding: 4px 18px;">
+            <span class="ui-button-text">Close</span>
+          </button>
 
-            <button *ngIf="!existingTask && page.index > 0" type="button btn btn-primary" [disabled]="disabled" class="btn btn-secondary" (click)="handleBackPage()">
-              <i class="icon-upload icon-white"></i>
-              Back
-            </button>
-                            
-            <button *ngIf="!existingTask && page.index < (pages.length - 1)" type="button btn btn-primary" [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleNextPage()">
-              <i class="icon-upload icon-white"></i>
-              Next
-            </button>
-                            
-            <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary" [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleUpload()">
-              <i class="icon-upload icon-white"></i>
-              Upload
-            </button>
+          <button *ngIf="!existingTask && page.index > 0" type="button btn btn-primary" [disabled]="disabled"
+            class="btn btn-secondary" (click)="handleBackPage()">
+            <i class="icon-upload icon-white"></i>
+            Back
+          </button>
+
+          <button *ngIf="!existingTask && page.index < (pages.length - 1)" type="button btn btn-primary"
+            [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleNextPage()">
+            <i class="icon-upload icon-white"></i>
+            Next
+          </button>
+
+          <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary"
+            [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleUpload()">
+            <i class="icon-upload icon-white"></i>
+            Upload
+          </button>
         </div>
-      </div>                    
-    </div>                    
-    </div>                    
-    
+      </div>
+    </div>
+  </div>
+
 </div>
