--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
@@ -51,11 +51,11 @@
         <input [(ngModel)]="sensor.pixelSizeHeight" name="pixelSizeHeight" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
-        <label>Sensor Width</label>
+        <label>Sensor Width</label> (millimeters)
         <input [(ngModel)]="sensor.sensorWidth" name="sensorWidth" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
-        <label>Sensor Height</label>
+        <label>Sensor Height</label> (millimeters)
         <input [(ngModel)]="sensor.sensorHeight" name="sensorHeight" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
