--- a/uasdm-web/src/main/ng2/src/app/site/component/uav/uav.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/uav/uav.component.html
@@ -22,11 +22,16 @@
       <form #ngForm="ngForm">
         <div class="form-group">
           <label>Platform</label>
-          <select [(ngModel)]="uav.platform" [disabled]="mode === 'READ'" name="platform" type="input"
+          <select *ngIf="mode !== 'READ'" [(ngModel)]="uav.platform" name="platform" type="input"
             class="form-control" required>
             <option></option>
             <option *ngFor="let platform of platforms" [value]="platform.oid">{{platform.name}}</option>
           </select>
+          <ng-container *ngIf="mode === 'READ'">
+            <div *ngFor="let platform of platforms | filter:'oid':uav.platform">
+              <a [routerLink]="['/site/platform', platform.oid]">{{platform.name}}</a>
+            </div>
+          </ng-container>          
         </div>
         <div class="form-group">
           <label>Serial Number</label>
